--- a/ThemeColors.xaml
+++ b/ThemeColors.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="DefaultForeground" Color="{DynamicResource DefaultForegroundColor}"/>
     <SolidColorBrush x:Key="DefaultBackground" Color="{DynamicResource DefaultBackgroundColor}"/>
+    <SolidColorBrush x:Key="TitleBarForeground" Color="{DynamicResource TitleBarForegroundColor}"/>
     <SolidColorBrush x:Key="TitleBarBackground" Color="{DynamicResource TitleBarBackgroundColor}"/>
     <SolidColorBrush x:Key="CloseAppButtonBrush" Color="{DynamicResource CloseAppButtonColor}"/>
 </ResourceDictionary>
