--- a/TitleBar.xaml
+++ b/TitleBar.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d"
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid Background="{DynamicResource TitleBarBackground}">
-        <DockPanel TextElement.Foreground="{DynamicResource DefaultForeground}">
+        <DockPanel TextElement.Foreground="{DynamicResource TitleBarForeground}">
             <DockPanel.Resources>
                 <Style TargetType="{x:Type Button}" BasedOn="{StaticResource FlatButton}">
                     <Setter Property="VerticalAlignment" Value="Center"/>
@@ -26,8 +26,8 @@
                 </Style>
             </DockPanel.Style>
             <Image Margin="4,0" VerticalAlignment="Center" DockPanel.Dock="Left" Source="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" Width="16" Height="16" Stretch="Uniform" StretchDirection="DownOnly"/>
-            <Button Command="SystemCommands.CloseWindowCommand" Content="{ui:Icon window-close, 20}" BorderBrush="{DynamicResource CloseAppButtonBrush}" ToolTip="Close"/>
-            <Button Command="SystemCommands.RestoreWindowCommand" Content="{ui:Icon window-restore, 20}" ToolTip="Restore">
+            <Button Command="SystemCommands.CloseWindowCommand" Content="{ui:Icon window-close, 20}" Foreground="{DynamicResource TitleBarForeground}" BorderBrush="{DynamicResource CloseAppButtonBrush}" ToolTip="Close"/>
+            <Button Command="SystemCommands.RestoreWindowCommand" Content="{ui:Icon window-restore, 20}" Foreground="{DynamicResource TitleBarForeground}" ToolTip="Restore">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
                         <Style.Triggers>
@@ -38,7 +38,7 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button Command="SystemCommands.MaximizeWindowCommand" Content="{ui:Icon window-maximize, 20}" ToolTip="Maximize">
+            <Button Command="SystemCommands.MaximizeWindowCommand" Content="{ui:Icon window-maximize, 20}" Foreground="{DynamicResource TitleBarForeground}" ToolTip="Maximize">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
                         <Style.Triggers>
@@ -49,7 +49,7 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button Command="SystemCommands.MinimizeWindowCommand" Content="{ui:Icon window-minimize, 20}" ToolTip="Minimize">
+            <Button Command="SystemCommands.MinimizeWindowCommand" Content="{ui:Icon window-minimize, 20}" Foreground="{DynamicResource TitleBarForeground}" ToolTip="Minimize">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
                         <Style.Triggers>
