--- a/App.xaml
+++ b/App.xaml
@@ -5,6 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/ComboBox.xaml"/>
                 <ResourceDictionary Source="Styles/Misc.xaml"/>
                 <ResourceDictionary Source="Styles/Scrollbar.xaml"/>
             </ResourceDictionary.MergedDictionaries>
