--- a/Settings/SettingsControl.xaml
+++ b/Settings/SettingsControl.xaml
@@ -34,6 +34,20 @@
             <Setter Property="Padding" Value="8,4"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
+
+        <Style x:Key="ValueComboBox" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource FlatComboBox}">
+            <Style.Resources>
+                <ui:BrushToValueAdjustedBrushConverter x:Key="valueAdjust"/>
+            </Style.Resources>
+            <Setter Property="SelectedItem" Value="{Binding Value}"/>
+            <Setter Property="ItemsSource" Value="{Binding ValueList}"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Tag" Value="{DynamicResource DefaultBackground}"/>
+            <Setter Property="Background" Value="{Binding Tag, RelativeSource={RelativeSource Self}, Converter={StaticResource valueAdjust}, ConverterParameter=-0.05}"/>
+            <Setter Property="MaxWidth" Value="{StaticResource ValueWidth}"/>
+            <Setter Property="Padding" Value="8,4,24,4"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
         
         <DataTemplate x:Key="DirectorySetting" DataType="{x:Type settings:SettingsItem}">
             <Grid Margin="0,4">
@@ -47,7 +61,7 @@
                 <TextBlock Style="{StaticResource LabelTextBlock}"/>
                 <DockPanel Grid.Column="1" Width="{StaticResource ValueWidth}" VerticalAlignment="Center">
                     <Button DockPanel.Dock="Right" Margin="4,0,0,0" Style="{StaticResource FlatButton}" Content="{ui:Icon folder-outline}" VerticalAlignment="Center" ToolTip="Browse for directory" Command="{Binding BrowseForDirectoryCommand, RelativeSource={RelativeSource AncestorType={x:Type settings:SettingsControl}}}" CommandParameter="{Binding}"/>
-                    <TextBox Style="{StaticResource ValueTextBox}" VerticalAlignment="Center" Text="{Binding Value}"/>
+                    <TextBox Style="{StaticResource ValueTextBox}"/>
                 </DockPanel>
             </Grid>
         </DataTemplate>
@@ -61,7 +75,7 @@
                     <RowDefinition SharedSizeGroup="LabelRowGroup" Height="Auto"/>
                 </Grid.RowDefinitions>
                 <TextBlock Style="{StaticResource LabelTextBlock}"/>
-                <ComboBox Grid.Column="1" MaxWidth="{StaticResource ValueWidth}" VerticalAlignment="Center" ItemsSource="{Binding ValueList}" SelectedItem="{Binding Value}"/>
+                <ComboBox Style="{StaticResource ValueComboBox}"/>
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="BoolSetting" DataType="{x:Type settings:SettingsItem}">
